Bug #678408 - WebKit renders frames with plain/text parts too small

Workaround for a WebKit bug [0] which appeared in 1.9.x series.
When message is loaded, the content is zoomed in and out to force
WebKit to recalculate and redraw the iframe so that the content
is correctly visible

[0] https://bugs.webkit.org/show_bug.cgi?id=89553